Added HTML and CSS for nav, about, and project section

--- a/index.html
+++ b/index.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--Header Font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">    
+    <!--Link to Style Sheet-->
+    <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <!--Top Navigation Bar-->
+    <header>
+         <nav class = "nav">
+            <div class = "name">Kevin Sun</div>
+            <div class = "links">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="#contact">Contact</a>
+                <a href="#projects">Projects</a>
+            </div>
+        </nav>
+    </header>
+    <section id = "abput" class="bg-img about">
+            <div class="text">
+                <h2>Kevin Sun</h2>
+                <button>My Projects</button>
+            </div>
+        </div>
+    </section>
+    <section id="projects">
+        <a href=""><img src="" alt="">box1</a>
+        <a href=""><img src="" alt="">box2</a>
+        <a href=""><img src="" alt="">box3</a>
+        <a href=""><img src="" alt="">box4</a>
+        <a href=""><img src="" alt="">box5</a>
+        <a href=""><img src="" alt="">box6</a>
+    </section>
 </body>
-</html>
