Added footer section

--- a/index.html
+++ b/index.html
@@ -39,4 +39,7 @@
         <a href=""><img src="" alt="">box5</a>
         <a href=""><img src="" alt="">box6</a>
     </section>
+    <footer id="contact">
+        <button>Contact Me</button>
+    </footer>
 </body>
