--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--Header Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Zen+Kaku+Gothic+Antique&display=swap" rel="stylesheet">
     <!--Link to Style Sheet-->
     <link rel="stylesheet" href="style/index.css">
     <title>Document</title>
@@ -17,27 +17,45 @@
          <nav class = "nav">
             <div class = "name">Kevin Sun</div>
             <div class = "links">
-                <a href="#home">Home</a>
-                <a href="#about">About</a>
-                <a href="#contact">Contact</a>
-                <a href="#projects">Projects</a>
+                <a href="#home" target = "_blank">Home</a>
+                <a href="#about" target = "_blank">About</a>
+                <a href="#contact" target = "_blank">Contact</a>
+                <a href="#projects" target = "_blank">Projects</a>
             </div>
         </nav>
     </header>
     <section id = "abput" class="bg-img about">
             <div class="text">
                 <h2>Kevin Sun</h2>
-                <button>My Projects</button>
+                <button class = "button">My Projects</button>
             </div>
         </div>
     </section>
     <section id="projects">
-        <a href=""><img src="" alt="">box1</a>
-        <a href=""><img src="" alt="">box2</a>
-        <a href=""><img src="" alt="">box3</a>
-        <a href=""><img src="" alt="">box4</a>
-        <a href=""><img src="" alt="">box5</a>
-        <a href=""><img src="" alt="">box6</a>
+        <div>
+            <img src="Graphics/scott-gummerson-_5Q1-ae44aw-unsplash.jpg" alt="">
+            <p>Need Zzz</p>
+        </div>
+        <div>
+            <img src="/Graphics/guillermo-diaz-H1a4cIeVZwI-unsplash.jpg" alt="">
+            <p>I'm Heated</p>
+        </div>
+        <div>
+            <img src=".//Graphics/melvin-chavez-uCqpNqdA-5U-unsplash.jpg" alt="">
+            <p>One Piece, One Chance</p>
+        </div>
+        <div>
+            <img src="Graphics/maha-khairy-3uuLWb6aQXc-unsplash.jpg" alt="">
+            <p>This is too shocking</p>
+        </div>
+        <div>
+            <img src="Graphics/higor-hanschen-DomqHKN2Xik-unsplash.jpg" alt="">
+            <p>Believe it!</p>
+        </div>
+        <div>
+            <img src="/Graphics/kadyn-pierce-49X42qrgUmQ-unsplash.jpg" alt="">
+            <p>Breathe...</p>
+        </div>
     </section>
     <footer id="contact">
         <button>Contact Me</button>
