Rewrote html and css

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
     <title>Document</title>
 </head>
 <body>
-    <!--Top Navigation Bar-->
     <header>
-         <nav class = "nav">
-            <div class = "name">Kevin Sun</div>
+        <div class="name">
+            <h1>Kevin Sun</h1>
+        </div>
+        <nav>
             <div class = "links">
                 <a href="#home" target = "_blank">Home</a>
                 <a href="#about" target = "_blank">About</a>
@@ -24,40 +25,45 @@
             </div>
         </nav>
     </header>
-    <section id = "abput" class="bg-img about">
-            <div class="text">
-                <h2>Kevin Sun</h2>
-                <button class = "button">My Projects</button>
-            </div>
+    <div class="container">
+
+    <section class="top">
+        <div class="text">
+            <h2>Kevin Sun</h2>
+            <button>My Projects</button>
         </div>
     </section>
-    <section id="projects">
-        <div>
-            <img src="Graphics/scott-gummerson-_5Q1-ae44aw-unsplash.jpg" alt="">
-            <p>Need Zzz</p>
+
+    <section class="middle">
+        <div class="box">
+            <img src="/Graphics/gracia-dharma-qTlbO6mkQH0-unsplash.jpg" alt="">
+            <p>Project 1</p>
         </div>
-        <div>
+        <div class="box">
             <img src="/Graphics/guillermo-diaz-H1a4cIeVZwI-unsplash.jpg" alt="">
-            <p>I'm Heated</p>
+            <p>Project 2</p>
         </div>
-        <div>
-            <img src=".//Graphics/melvin-chavez-uCqpNqdA-5U-unsplash.jpg" alt="">
-            <p>One Piece, One Chance</p>
+        <div class="box">
+            <img src="/Graphics/higor-hanschen-DomqHKN2Xik-unsplash.jpg" alt="">
+            <p>Project 3</p>
         </div>
-        <div>
-            <img src="Graphics/maha-khairy-3uuLWb6aQXc-unsplash.jpg" alt="">
-            <p>This is too shocking</p>
+        <div class="box">
+            <img src="/Graphics/ian-valerio-CAFq0pv9HjY-unsplash.jpg" alt="">
+            <p>Project 4</p>
         </div>
-        <div>
-            <img src="Graphics/higor-hanschen-DomqHKN2Xik-unsplash.jpg" alt="">
-            <p>Believe it!</p>
-        </div>
-        <div>
+        <div class="box">
             <img src="/Graphics/kadyn-pierce-49X42qrgUmQ-unsplash.jpg" alt="">
-            <p>Breathe...</p>
+            <p>Project 5</p>
+        </div>
+        <div class="box">
+            <img src="/Graphics/maha-khairy-3uuLWb6aQXc-unsplash.jpg" alt="">
+            <p>Project 6</p>
         </div>
     </section>
-    <footer id="contact">
+    </div> 
+         
+    <footer class = "bottom">
         <button>Contact Me</button>
     </footer>
+
 </body>
