Changed color scheme and photos

--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
 
     <section class="middle">
         <div class="box">
-            <img src="/Graphics/gracia-dharma-qTlbO6mkQH0-unsplash.jpg" alt="">
+            <img src="/Graphics/project1img.jpg" alt="">
             <p>Project 1</p>
         </div>
         <div class="box">
-            <img src="/Graphics/guillermo-diaz-H1a4cIeVZwI-unsplash.jpg" alt="">
+            <img src="/Graphics/project2img.jpg" alt="">
             <p>Project 2</p>
         </div>
         <div class="box">
-            <img src="/Graphics/higor-hanschen-DomqHKN2Xik-unsplash.jpg" alt="">
+            <img src="/Graphics/project3img.jpg" alt="">
             <p>Project 3</p>
         </div>
         <div class="box">
-            <img src="/Graphics/ian-valerio-CAFq0pv9HjY-unsplash.jpg" alt="">
+            <img src="/Graphics/project4img.jpg" alt="">
             <p>Project 4</p>
         </div>
         <div class="box">
-            <img src="/Graphics/kadyn-pierce-49X42qrgUmQ-unsplash.jpg" alt="">
+            <img src="/Graphics/project5img.jpg" alt="">
             <p>Project 5</p>
         </div>
         <div class="box">
-            <img src="/Graphics/maha-khairy-3uuLWb6aQXc-unsplash.jpg" alt="">
+            <img src="/Graphics/project6img.jpg" alt="">
             <p>Project 6</p>
         </div>
     </section>
